--- a/main.scss
+++ b/main.scss
@@ -134,7 +134,7 @@ body {
   &__secondRow {
     display: flex;
     .firstImage {
-      background: url(/images/image-about-dark.jpg);
+      background: url("/images/image-about-dark.jpg");
       width: 420px;
       height: 256px;
     }
