--- a/main.scss
+++ b/main.scss
@@ -20,7 +20,7 @@ body {
   &__firstRow {
     display: flex;
     .imageContainer {
-      background: url("/images/desktop-image-hero-1.jpg");
+      background: url("./images/desktop-image-hero-1.jpg");
       width: 840px;
       height: 534px;
 
@@ -134,7 +134,7 @@ body {
   &__secondRow {
     display: flex;
     .firstImage {
-      background: url("/images/image-about-dark.jpg");
+      background: url("./images/image-about-dark.jpg");
       width: 420px;
       height: 256px;
     }
@@ -160,7 +160,7 @@ body {
       }
     }
     .secondImage {
-      background: url("/images/image-about-light.jpg");
+      background: url("./images/image-about-light.jpg");
       width: 420px;
       height: 256px;
     }
