--- a/main.scss
+++ b/main.scss
@@ -108,7 +108,7 @@ body {
         top: 90px;
         right: 235px;
 
-        .sliderOne {
+        .sliderLeft {
           background-color: $Black;
           padding: 20px 25px;
           color: $Dark-Gray;
@@ -118,7 +118,7 @@ body {
             cursor: pointer;
           }
         }
-        .sliderTwo {
+        .sliderRight {
           background-color: $Black;
           padding: 20px 26px;
           color: $Dark-Gray;
